--- a/docs/node/docs/pages/advanced/receipts-and-logs.mdx
+++ b/docs/node/docs/pages/advanced/receipts-and-logs.mdx
@@ -3,7 +3,7 @@ title: Receipts & Logs
 description: Handling receipts, logs, and filters
 ---
 
-import { Callout, Steps, Tabs, Tab, Card, Cards, Button, FileTree } from 'vocs/components'
+import { Callout, Steps, Step, Button } from 'vocs/components'
 
 # Receipts & Logs
 
