--- a/docs/node/docs/pages/ethers.mdx
+++ b/docs/node/docs/pages/ethers.mdx
@@ -98,6 +98,6 @@ const result = await client.tevmCall({
 
 ## Next Steps
 
-- Learn about [forking from live networks](../core/forking)
-- Explore [building a debugger UI](./debugger-ui)
-- See how to [integrate with local testing](./local-testing)
+- Learn about [forking from live networks](/core/forking)
+- Explore [building a debugger UI](/examples/debugger-ui)
+- See how to [integrate with local testing](/examples/local-testing)
