--- a/docs/node/docs/pages/examples/ethers.mdx
+++ b/docs/node/docs/pages/examples/ethers.mdx
@@ -6,7 +6,8 @@ authors:
   - "[Tevm Team](https://github.com/evmts)"
 ---
 
-import { Callout, Steps, Step, Tabs, Tab, Button, Cards, Card } from 'vocs/components'
+import { Callout, Steps, Step, Button } from 'vocs/components'
+import { Tab, TabGroup, Card, CardGrid } from '../../../components'
 
 # Using with Ethers.js v6
 
