--- a/docs/node/docs/pages/advanced/performance-profiler.mdx
+++ b/docs/node/docs/pages/advanced/performance-profiler.mdx
@@ -3,7 +3,7 @@ title: Performance & Profiler
 description: How to measure EVM performance with Tevm Node
 ---
 
-import { Callout, Steps, Tabs, Tab, Card, Cards, Button, FileTree } from 'vocs/components'
+import { Callout, Steps, Step, Button } from 'vocs/components'
 
 # Performance & Profiler
 
@@ -15,99 +15,83 @@ The performance profiler tracks execution time, gas usage, and other metrics for
 
 ## Quick Start
 
-<Tabs>
-  <Tab label="Basic Setup">
-    ```typescript showLineNumbers {1,3-8,11,14,17,20} filename="basic-profiling.ts"
-    import { createTevmNode } from 'tevm'
-    
-    const node = createTevmNode({ // [!code focus]
-      profiler: { // [!code focus]
-        enabled: true, // [!code focus]
-        includeOpcodes: true, // Track individual opcodes // [!code focus]
-        includePrecompiles: true, // Track precompiled contracts // [!code focus]
-      } // [!code focus]
-    })
-    
-    // Execute some transactions or function calls
-    const vm = await node.getVm() // [!code focus]
-    
-    // Run your contract operations
-    await vm.runTx({ /* transaction details */ }) // [!code focus]
-    
-    // Get performance logs
-    const logs = vm.evm.getPerformanceLogs() // [!code focus]
-    
-    // Clear logs when done
-    vm.evm.clearPerformanceLogs() // [!code focus]
-    ```
-  </Tab>
-  
-  <Tab label="Complete Example">
-    ```typescript showLineNumbers {3-12,15-19,22-35} filename="contract-profiling.ts"
-    import { createTevmNode } from 'tevm'
-    
-    // Create a node with profiling enabled
-    const node = createTevmNode({ // [!code focus]
-      profiler: { // [!code focus]
-        enabled: true, // [!code focus]
-        includeOpcodes: true, // [!code focus]
-        includePrecompiles: true, // [!code focus]
-        includeMemory: true, // Include memory operations // [!code focus]
-        includeStorage: true, // Include storage operations // [!code focus]
-        callStackDepth: 10, // Maximum call stack depth to track // [!code focus]
-      } // [!code focus]
-    })
-    
-    // Set up the contract
-    const vm = await node.getVm() // [!code focus]
-    const deployTx = createTx({ /* deployment transaction */ }) // [!code focus]
-    await vm.runTx({ tx: deployTx }) // [!code focus]
-    const contractAddress = deployTx.createdAddress // [!code focus]
-    
-    // Profile a specific function call
-    // Clear previous logs first
-    vm.evm.clearPerformanceLogs() // [!code focus]
-    
-    // Call the contract function
-    const callTx = createTx({ // [!code focus]
-      to: contractAddress, // [!code focus]
-      data: '0xa9059cbb000000000000000000000000123...', // function selector + params // [!code focus]
-    }) // [!code focus]
-    await vm.runTx({ tx: callTx }) // [!code focus]
-    
-    // Analyze the performance
-    const logs = vm.evm.getPerformanceLogs() // [!code focus]
-    const analysis = analyzePerformance(logs) // [!code focus]
-    
-    console.log(`Total execution time: ${analysis.totalTime}ms`) // [!code focus]
-    console.log(`Total gas used: ${analysis.totalGas}`) // [!code focus]
-    console.log(`Hotspots: ${JSON.stringify(analysis.hotspots)}`) // [!code focus]
-    ```
-  </Tab>
-</Tabs>
+### Basic Setup
+
+```typescript showLineNumbers {1,3-8,11,14,17,20} filename="basic-profiling.ts"
+import { createTevmNode } from 'tevm'
+
+const node = createTevmNode({ // [!code focus]
+  profiler: { // [!code focus]
+    enabled: true, // [!code focus]
+    includeOpcodes: true, // Track individual opcodes // [!code focus]
+    includePrecompiles: true, // Track precompiled contracts // [!code focus]
+  } // [!code focus]
+})
+
+// Execute some transactions or function calls
+const vm = await node.getVm() // [!code focus]
+
+// Run your contract operations
+await vm.runTx({ /* transaction details */ }) // [!code focus]
+
+// Get performance logs
+const logs = vm.evm.getPerformanceLogs() // [!code focus]
+
+// Clear logs when done
+vm.evm.clearPerformanceLogs() // [!code focus]
+```
+
+### Complete Example
+
+```typescript showLineNumbers {3-12,15-19,22-35} filename="contract-profiling.ts"
+import { createTevmNode } from 'tevm'
+
+// Create a node with profiling enabled
+const node = createTevmNode({ // [!code focus]
+  profiler: { // [!code focus]
+    enabled: true, // [!code focus]
+    includeOpcodes: true, // [!code focus]
+    includePrecompiles: true, // [!code focus]
+    includeMemory: true, // Include memory operations // [!code focus]
+    includeStorage: true, // Include storage operations // [!code focus]
+    callStackDepth: 10, // Maximum call stack depth to track // [!code focus]
+  } // [!code focus]
+})
+
+// Set up the contract
+const vm = await node.getVm() // [!code focus]
+const deployTx = createTx({ /* deployment transaction */ }) // [!code focus]
+await vm.runTx({ tx: deployTx }) // [!code focus]
+const contractAddress = deployTx.createdAddress // [!code focus]
+
+// Profile a specific function call
+// Clear previous logs first
+vm.evm.clearPerformanceLogs() // [!code focus]
+
+// Call the contract function
+const callTx = createTx({ // [!code focus]
+  to: contractAddress, // [!code focus]
+  data: '0xa9059cbb000000000000000000000000123...', // function selector + params // [!code focus]
+}) // [!code focus]
+await vm.runTx({ tx: callTx }) // [!code focus]
+
+// Analyze the performance
+const logs = vm.evm.getPerformanceLogs() // [!code focus]
+const analysis = analyzePerformance(logs) // [!code focus]
+
+console.log(`Total execution time: ${analysis.totalTime}ms`) // [!code focus]
+console.log(`Total gas used: ${analysis.totalGas}`) // [!code focus]
+console.log(`Hotspots: ${JSON.stringify(analysis.hotspots)}`) // [!code focus]
+```
 
 ## Profiler Configuration
 
-<Cards>
-  <Card title="Opcode Tracking" icon="⚙️">
-    Track execution time and gas usage for individual EVM opcodes
-  </Card>
-  <Card title="Call Stack Analysis" icon="📞">
-    Profile the entire call tree to identify expensive contract interactions
-  </Card>
-  <Card title="Gas Analysis" icon="⛽">
-    Identify operations that consume the most gas
-  </Card>
-  <Card title="Memory Usage" icon="💾">
-    Track memory allocation and access patterns
-  </Card>
-  <Card title="Storage I/O" icon="💽">
-    Measure the impact of storage reads and writes
-  </Card>
-  <Card title="Precompile Usage" icon="🧩">
-    Profile built-in and custom precompiled contracts
-  </Card>
-</Cards>
+- **⚙️ Opcode Tracking** - Track execution time and gas usage for individual EVM opcodes
+- **📞 Call Stack Analysis** - Profile the entire call tree to identify expensive contract interactions
+- **⛽ Gas Analysis** - Identify operations that consume the most gas
+- **💾 Memory Usage** - Track memory allocation and access patterns
+- **💽 Storage I/O** - Measure the impact of storage reads and writes
+- **🧩 Precompile Usage** - Profile built-in and custom precompiled contracts
 
 <Callout type="tip" title="Configuration Options">
   You can configure which operations to profile based on your specific needs. For general purposes, enabling opcode and call tracking provides a good balance between detail and performance.
@@ -174,104 +158,102 @@ The performance profiler tracks execution time, gas usage, and other metrics for
 
 ## Performance Analysis
 
-<Tabs>
-  <Tab label="Opcode Analysis">
-    <p>Identify which opcodes consume the most time and gas:</p>
-    
-    ```typescript showLineNumbers {2-12,15-21,23-24} filename="opcode-analysis.ts"
-    // Group logs by opcode
-    const opcodeStats = logs // [!code focus]
-      .filter(log => log.type === 'opcode') // [!code focus]
-      .reduce((acc, log) => { // [!code focus]
-        const key = log.opcode // [!code focus]
-        acc[key] = acc[key] || { count: 0, totalTime: 0, totalGas: 0n } // [!code focus]
-        acc[key].count++ // [!code focus]
-        acc[key].totalTime += log.executionTime // [!code focus]
-        acc[key].totalGas += log.gasUsed ?? 0n // [!code focus]
-        return acc // [!code focus]
-      }, {}) // [!code focus]
-    
-    // Find most expensive operations by time
-    const expensiveOpsByTime = Object.entries(opcodeStats) // [!code focus]
-      .sort(([, a], [, b]) => b.totalTime - a.totalTime) // [!code focus]
-      .slice(0, 5) // [!code focus]
-      .map(([opcode, stats]) => ({ // [!code focus]
-        opcode, // [!code focus]
-        count: stats.count, // [!code focus]
-        totalTimeMs: stats.totalTime.toFixed(2), // [!code focus]
-        avgTimeMs: (stats.totalTime / stats.count).toFixed(2) // [!code focus]
-      })) // [!code focus]
-    
-    console.log('Most time-consuming opcodes:') // [!code focus]
-    console.table(expensiveOpsByTime) // [!code focus]
-    ```
-    
-    <Callout type="info" title="Common Hotspots">
-      Storage operations (SLOAD, SSTORE), complex math (MULMOD, ADDMOD), and external calls (CALL, DELEGATECALL) are typically the most expensive operations.
-    </Callout>
-  </Tab>
-  
-  <Tab label="Call Tree Analysis">
-    <p>Analyze contract interactions and call patterns:</p>
-    
-    ```typescript showLineNumbers {2-9,12-15,18-23} filename="call-analysis.ts"
-    // Map call depth and patterns
-    const callTree = logs // [!code focus]
-      .filter(log => log.type === 'call') // [!code focus]
-      .map(log => ({ // [!code focus]
-        from: log.from, // [!code focus]
-        to: log.to, // [!code focus]
-        executionTime: log.executionTime, // [!code focus]
-        gasUsed: log.gasUsed, // [!code focus]
-        depth: log.depth // [!code focus]
-      }))
-    
-    // Group by contract address
-    const contractTimes = callTree.reduce((acc, call) => { // [!code focus]
-      acc[call.to] = (acc[call.to] || 0) + call.executionTime // [!code focus]
-      return acc // [!code focus]
-    }, {}) // [!code focus]
-    
-    // Find most time-consuming contracts
-    const slowestContracts = Object.entries(contractTimes) // [!code focus]
-      .sort(([, a], [, b]) => b - a) // [!code focus]
-      .slice(0, 3) // [!code focus]
-      .map(([address, time]) => // [!code focus]
-        `${address}: ${time.toFixed(2)}ms` // [!code focus]
-      ) // [!code focus]
-    ```
-  </Tab>
-  
-  <Tab label="Gas Analysis">
-    <p>Track gas consumption patterns:</p>
-    
-    ```typescript showLineNumbers {2-8,11-18} filename="gas-analysis.ts"
-    // Track gas usage over time
-    const gasTimeline = logs // [!code focus]
-      .filter(log => log.gasUsed !== undefined) // [!code focus]
-      .map(log => ({ // [!code focus]
-        timestamp: log.startTime, // [!code focus]
-        gasUsed: log.gasUsed, // [!code focus]
-        type: log.type // [!code focus]
-      })) // [!code focus]
-    
-    // Calculate gas efficiency by operation type
-    const gasEfficiencyByType = gasTimeline.reduce((acc, log) => { // [!code focus]
-      acc[log.type] = acc[log.type] || { totalGas: 0n, totalTime: 0, count: 0 } // [!code focus]
-      acc[log.type].totalGas += log.gasUsed // [!code focus]
-      acc[log.type].totalTime += log.executionTime // [!code focus]
-      acc[log.type].count++ // [!code focus]
-      return acc // [!code focus]
-    }, {}) // [!code focus]
-    
-    // Calculate gas per millisecond for each operation type
-    Object.entries(gasEfficiencyByType).forEach(([type, stats]) => {
-      const gasPerMs = Number(stats.totalGas) / stats.totalTime
-      console.log(`${type}: ${gasPerMs.toFixed(2)} gas/ms (${stats.count} operations)`)
-    })
-    ```
-  </Tab>
-</Tabs>
+### Opcode Analysis
+
+<p>Identify which opcodes consume the most time and gas:</p>
+
+```typescript showLineNumbers {2-12,15-21,23-24} filename="opcode-analysis.ts"
+// Group logs by opcode
+const opcodeStats = logs // [!code focus]
+  .filter(log => log.type === 'opcode') // [!code focus]
+  .reduce((acc, log) => { // [!code focus]
+    const key = log.opcode // [!code focus]
+    acc[key] = acc[key] || { count: 0, totalTime: 0, totalGas: 0n } // [!code focus]
+    acc[key].count++ // [!code focus]
+    acc[key].totalTime += log.executionTime // [!code focus]
+    acc[key].totalGas += log.gasUsed ?? 0n // [!code focus]
+    return acc // [!code focus]
+  }, {}) // [!code focus]
+
+// Find most expensive operations by time
+const expensiveOpsByTime = Object.entries(opcodeStats) // [!code focus]
+  .sort(([, a], [, b]) => b.totalTime - a.totalTime) // [!code focus]
+  .slice(0, 5) // [!code focus]
+  .map(([opcode, stats]) => ({ // [!code focus]
+    opcode, // [!code focus]
+    count: stats.count, // [!code focus]
+    totalTimeMs: stats.totalTime.toFixed(2), // [!code focus]
+    avgTimeMs: (stats.totalTime / stats.count).toFixed(2) // [!code focus]
+  })) // [!code focus]
+
+console.log('Most time-consuming opcodes:') // [!code focus]
+console.table(expensiveOpsByTime) // [!code focus]
+```
+
+<Callout type="info" title="Common Hotspots">
+  Storage operations (SLOAD, SSTORE), complex math (MULMOD, ADDMOD), and external calls (CALL, DELEGATECALL) are typically the most expensive operations.
+</Callout>
+
+### Call Tree Analysis
+
+<p>Analyze contract interactions and call patterns:</p>
+
+```typescript showLineNumbers {2-9,12-15,18-23} filename="call-analysis.ts"
+// Map call depth and patterns
+const callTree = logs // [!code focus]
+  .filter(log => log.type === 'call') // [!code focus]
+  .map(log => ({ // [!code focus]
+    from: log.from, // [!code focus]
+    to: log.to, // [!code focus]
+    executionTime: log.executionTime, // [!code focus]
+    gasUsed: log.gasUsed, // [!code focus]
+    depth: log.depth // [!code focus]
+  }))
+
+// Group by contract address
+const contractTimes = callTree.reduce((acc, call) => { // [!code focus]
+  acc[call.to] = (acc[call.to] || 0) + call.executionTime // [!code focus]
+  return acc // [!code focus]
+}, {}) // [!code focus]
+
+// Find most time-consuming contracts
+const slowestContracts = Object.entries(contractTimes) // [!code focus]
+  .sort(([, a], [, b]) => b - a) // [!code focus]
+  .slice(0, 3) // [!code focus]
+  .map(([address, time]) => // [!code focus]
+    `${address}: ${time.toFixed(2)}ms` // [!code focus]
+  ) // [!code focus]
+```
+
+### Gas Analysis
+
+<p>Track gas consumption patterns:</p>
+
+```typescript showLineNumbers {2-8,11-18} filename="gas-analysis.ts"
+// Track gas usage over time
+const gasTimeline = logs // [!code focus]
+  .filter(log => log.gasUsed !== undefined) // [!code focus]
+  .map(log => ({ // [!code focus]
+    timestamp: log.startTime, // [!code focus]
+    gasUsed: log.gasUsed, // [!code focus]
+    type: log.type // [!code focus]
+  })) // [!code focus]
+
+// Calculate gas efficiency by operation type
+const gasEfficiencyByType = gasTimeline.reduce((acc, log) => { // [!code focus]
+  acc[log.type] = acc[log.type] || { totalGas: 0n, totalTime: 0, count: 0 } // [!code focus]
+  acc[log.type].totalGas += log.gasUsed // [!code focus]
+  acc[log.type].totalTime += log.executionTime // [!code focus]
+  acc[log.type].count++ // [!code focus]
+  return acc // [!code focus]
+}, {}) // [!code focus]
+
+// Calculate gas per millisecond for each operation type
+Object.entries(gasEfficiencyByType).forEach(([type, stats]) => {
+  const gasPerMs = Number(stats.totalGas) / stats.totalTime
+  console.log(`${type}: ${gasPerMs.toFixed(2)} gas/ms (${stats.count} operations)`)
+})
+```
 
 ## Use Cases
 
@@ -384,119 +366,117 @@ The performance profiler tracks execution time, gas usage, and other metrics for
 
 ## Best Practices
 
-<Tabs>
-  <Tab label="Targeted Profiling">
-    <Callout type="tip" title="Profile Specific Operations">
-      For most accurate results, profile specific operations in isolation rather than entire sessions.
-    </Callout>
-    
-    ```typescript showLineNumbers {1-10} filename="targeted-profiling.ts"
-    // Clear logs before the specific operation you want to profile
+### Targeted Profiling
+
+<Callout type="tip" title="Profile Specific Operations">
+  For most accurate results, profile specific operations in isolation rather than entire sessions.
+</Callout>
+
+```typescript showLineNumbers {1-10} filename="targeted-profiling.ts"
+// Clear logs before the specific operation you want to profile
+vm.evm.clearPerformanceLogs()
+
+// Run only the operation you want to profile
+await vm.runTx({ tx: specificOperationTx })
+
+// Analyze just that operation
+const logs = vm.evm.getPerformanceLogs()
+const analysis = analyzePerformance(logs)
+
+// Clear logs when done to prevent memory build-up
+vm.evm.clearPerformanceLogs()
+```
+
+### Memory Management
+
+<Callout type="warning" title="Handle Large Log Volumes">
+  Profiling generates a lot of data. Implement strategies to manage memory usage.
+</Callout>
+
+```typescript showLineNumbers {1-21} filename="memory-management.ts"
+// For long-running sessions, clear logs periodically
+async function profileWithMemoryManagement(operations) {
+  const results = []
+  
+  for (const op of operations) {
+    // Clear before each operation
     vm.evm.clearPerformanceLogs()
     
-    // Run only the operation you want to profile
-    await vm.runTx({ tx: specificOperationTx })
+    // Run the operation
+    await vm.runTx({ tx: op.tx })
     
-    // Analyze just that operation
+    // Process logs immediately
     const logs = vm.evm.getPerformanceLogs()
-    const analysis = analyzePerformance(logs)
+    const summary = summarizeLogs(logs) // Extract just what you need
     
-    // Clear logs when done to prevent memory build-up
-    vm.evm.clearPerformanceLogs()
-    ```
-  </Tab>
-  
-  <Tab label="Memory Management">
-    <Callout type="warning" title="Handle Large Log Volumes">
-      Profiling generates a lot of data. Implement strategies to manage memory usage.
-    </Callout>
-    
-    ```typescript showLineNumbers {1-21} filename="memory-management.ts"
-    // For long-running sessions, clear logs periodically
-    async function profileWithMemoryManagement(operations) {
-      const results = []
-      
-      for (const op of operations) {
-        // Clear before each operation
-        vm.evm.clearPerformanceLogs()
-        
-        // Run the operation
-        await vm.runTx({ tx: op.tx })
-        
-        // Process logs immediately
-        const logs = vm.evm.getPerformanceLogs()
-        const summary = summarizeLogs(logs) // Extract just what you need
-        
-        // Save only the summary
-        results.push({
-          operation: op.name,
-          summary
-        })
-        
-        // Clear immediately to free memory
-        vm.evm.clearPerformanceLogs()
-      }
-      
-      return results
-    }
-    ```
-  </Tab>
-  
-  <Tab label="Comparative Analysis">
-    <Callout type="tip" title="Before/After Optimization">
-      Always measure performance before and after optimization to verify improvements.
-    </Callout>
-    
-    ```typescript showLineNumbers {1-14} filename="comparative-analysis.ts"
-    // Compare before and after optimization
-    async function measureOptimizationImpact(originalCode, optimizedCode) {
-      // Profile original implementation
-      vm.evm.clearPerformanceLogs()
-      await runImplementation(originalCode)
-      const beforeLogs = vm.evm.getPerformanceLogs()
-      const beforeMetrics = analyzePerformance(beforeLogs)
-      
-      // Profile optimized implementation
-      vm.evm.clearPerformanceLogs()
-      await runImplementation(optimizedCode)
-      const afterLogs = vm.evm.getPerformanceLogs()
-      const afterMetrics = analyzePerformance(afterLogs)
-      
-      // Calculate improvements
-      return {
-        timeImprovement: (1 - afterMetrics.totalTime / beforeMetrics.totalTime) * 100,
-        gasImprovement: (1 - Number(afterMetrics.totalGas) / Number(beforeMetrics.totalGas)) * 100,
-        details: compareMetrics(beforeMetrics, afterMetrics)
-      }
-    }
-    ```
-  </Tab>
-  
-  <Tab label="Production Use">
-    <Callout type="warning" title="Profiler Overhead">
-      The profiler itself adds some overhead. Consider these guidelines for production use.
-    </Callout>
-    
-    ```typescript showLineNumbers {1-15} filename="production-profiling.ts"
-    // For production environments
-    const node = createTevmNode({
-      profiler: {
-        // Only enable in specific environments
-        enabled: process.env.ENABLE_PROFILING === 'true',
-        
-        // Use selective profiling to reduce overhead
-        includeOpcodes: false,      // Disable full opcode tracking
-        samplingRate: 0.01,         // Only profile 1% of operations
-        includeMemory: false,       // Skip memory tracking
-        includeStorage: false,      // Skip storage tracking
-        
-        // Only track high-level calls for a system overview
-        includeHighLevelCalls: true
-      }
+    // Save only the summary
+    results.push({
+      operation: op.name,
+      summary
     })
-    ```
-  </Tab>
-</Tabs>
+    
+    // Clear immediately to free memory
+    vm.evm.clearPerformanceLogs()
+  }
+  
+  return results
+}
+```
+
+### Comparative Analysis
+
+<Callout type="tip" title="Before/After Optimization">
+  Always measure performance before and after optimization to verify improvements.
+</Callout>
+
+```typescript showLineNumbers {1-14} filename="comparative-analysis.ts"
+// Compare before and after optimization
+async function measureOptimizationImpact(originalCode, optimizedCode) {
+  // Profile original implementation
+  vm.evm.clearPerformanceLogs()
+  await runImplementation(originalCode)
+  const beforeLogs = vm.evm.getPerformanceLogs()
+  const beforeMetrics = analyzePerformance(beforeLogs)
+  
+  // Profile optimized implementation
+  vm.evm.clearPerformanceLogs()
+  await runImplementation(optimizedCode)
+  const afterLogs = vm.evm.getPerformanceLogs()
+  const afterMetrics = analyzePerformance(afterLogs)
+  
+  // Calculate improvements
+  return {
+    timeImprovement: (1 - afterMetrics.totalTime / beforeMetrics.totalTime) * 100,
+    gasImprovement: (1 - Number(afterMetrics.totalGas) / Number(beforeMetrics.totalGas)) * 100,
+    details: compareMetrics(beforeMetrics, afterMetrics)
+  }
+}
+```
+
+### Production Use
+
+<Callout type="warning" title="Profiler Overhead">
+  The profiler itself adds some overhead. Consider these guidelines for production use.
+</Callout>
+
+```typescript showLineNumbers {1-15} filename="production-profiling.ts"
+// For production environments
+const node = createTevmNode({
+  profiler: {
+    // Only enable in specific environments
+    enabled: process.env.ENABLE_PROFILING === 'true',
+    
+    // Use selective profiling to reduce overhead
+    includeOpcodes: false,      // Disable full opcode tracking
+    samplingRate: 0.01,         // Only profile 1% of operations
+    includeMemory: false,       // Skip memory tracking
+    includeStorage: false,      // Skip storage tracking
+    
+    // Only track high-level calls for a system overview
+    includeHighLevelCalls: true
+  }
+})
+```
 
 ## Related Resources
 
