--- a/docs/node/docs/pages/api/methods.mdx
+++ b/docs/node/docs/pages/api/methods.mdx
@@ -3,7 +3,7 @@ title: Methods
 description: Complete reference for Tevm Node's API methods and capabilities
 ---
 
-import { Callout, Steps, Tabs, Tab, Card, Cards, Button, FileTree } from 'vocs/components'
+import { Callout, Steps, Button } from 'vocs/components'
 
 # Tevm Node Methods
 
@@ -15,220 +15,229 @@ This reference documents the main API methods available on a Tevm Node instance.
 
 ## Core Methods
 
-<Cards>
-  <Card title="Initialization" icon="🚀">
-    Create and set up a Tevm Node instance
-  </Card>
-  <Card title="Virtual Machine" icon="⚙️">
-    Access the low-level EVM interface
-  </Card>
-  <Card title="Transaction Pool" icon="📥">
-    Manage pending transactions
-  </Card>
-  <Card title="Receipts & Logs" icon="📃">
-    Access transaction receipts and event logs
-  </Card>
-</Cards>
+<div style={{display: 'grid', gridTemplateColumns: 'repeat(auto-fill, minmax(200px, 1fr))', gap: '1rem', margin: '1rem 0'}}>
+  <div style={{border: '1px solid var(--vocs-border-color)', borderRadius: '8px', padding: '1rem'}}>
+    <h3>🚀 Initialization</h3>
+    <p>Create and set up a Tevm Node instance</p>
+  </div>
+  <div style={{border: '1px solid var(--vocs-border-color)', borderRadius: '8px', padding: '1rem'}}>
+    <h3>⚙️ Virtual Machine</h3>
+    <p>Access the low-level EVM interface</p>
+  </div>
+  <div style={{border: '1px solid var(--vocs-border-color)', borderRadius: '8px', padding: '1rem'}}>
+    <h3>📥 Transaction Pool</h3>
+    <p>Manage pending transactions</p>
+  </div>
+  <div style={{border: '1px solid var(--vocs-border-color)', borderRadius: '8px', padding: '1rem'}}>
+    <h3>📃 Receipts & Logs</h3>
+    <p>Access transaction receipts and event logs</p>
+  </div>
+</div>
 
-<Tabs>
-  <Tab label="Initialization">
-    ```ts showLineNumbers {1,3-7,9} filename="node-initialization.ts"
-    import { createTevmNode, http } from 'tevm'
-    
-    const node = createTevmNode({ // [!code focus]
-      fork: { // [!code focus]
-        transport: http('https://mainnet.infura.io/v3/YOUR-KEY') // [!code focus]
-      } // [!code focus]
-    }) // [!code focus]
-    
-    await node.ready() // Wait for initialization // [!code focus]
-    ```
-    
-    <Callout type="warning" title="Important">
-      Always wait for the node to be ready before using it. The <code>ready()</code> method returns a promise that resolves when the node is fully initialized.
-    </Callout>
-  </Tab>
-  
-  <Tab label="Virtual Machine">
-    ```ts showLineNumbers {1-3,5,8,11-19,22-27,30-33} filename="vm-access.ts"
-    import { createImpersonatedTx } from 'tevm/tx'
-    import { Block } from 'tevm/block'
-    import { createAddress } from 'tevm/address'
-    
-    const vm = await node.getVm() // [!code focus]
-    
-    // Create a block for the transaction
-    const block = new Block()
-    
-    // Create an impersonated transaction
-    const tx = createImpersonatedTx({ // [!code focus]
-      impersonatedAddress: createAddress('0x1234...'), // [!code focus]
-      nonce: 0n, // [!code focus]
-      gasLimit: 21064n, // [!code focus]
-      maxFeePerGas: 8n, // [!code focus]
-      maxPriorityFeePerGas: 1n, // [!code focus]
-      to: createAddress('0x5678...'), // [!code focus]
-      value: 1000000000000000000n, // 1 ETH // [!code focus]
-    }) // [!code focus]
-    
-    // Execute the transaction
-    const result = await vm.runTx({ // [!code focus]
-      tx, // [!code focus]
-      block, // [!code focus]
-      skipNonce: true,  // Skip nonce check // [!code focus]
-      skipBalance: true, // Skip balance check // [!code focus]
-    }) // [!code focus]
-    
-    // Check execution result
-    if (!result.execResult.exceptionError) { // [!code focus]
-      console.log('Transaction successful') // [!code focus]
-      console.log('Gas used:', result.totalGasSpent) // [!code focus]
-    } // [!code focus]
-    ```
-    
-    <Callout type="note" title="VM Direct Access">
-      The VM interface provides the lowest level of control, allowing you to execute transactions with precise parameters and inspect every aspect of execution.
-    </Callout>
-  </Tab>
-  
-  <Tab label="Transaction Pool">
-    ```ts showLineNumbers {1,4-9,12} filename="txpool-management.ts"
-    const txPool = await node.getTxPool() // [!code focus]
-    
-    // Add a transaction
-    await txPool.add({ // [!code focus]
-      from: '0x1234...', // [!code focus]
-      to: '0x5678...', // [!code focus]
-      value: 1000000000000000000n, // [!code focus]
-    }) // [!code focus]
-    
-    // Get pending transactions
-    // Sorted by gas price and nonce
-    const pending = await txPool.txsByPriceAndNonce() // [!code focus]
-    
-    // Get all pending transactions (raw access)
-    const allPending = txPool.getPendingTransactions()
-    
-    // Get pending nonce for an address
-    const nextNonce = txPool.getPendingNonce('0x1234...')
-    ```
-    
-    <Callout type="tip" title="Transaction Lifecycle">
-      Transactions added to the pool remain pending until they are mined into a block. The mining behavior depends on your node's mining configuration.
-    </Callout>
-  </Tab>
-  
-  <Tab label="Receipts & Logs">
-    ```ts showLineNumbers {1,4,7-12} filename="receipts-and-logs.ts"
-    const receipts = await node.getReceiptsManager() // [!code focus]
-    
-    // Get receipt for a transaction
-    const receipt = await receipts.getReceiptByTxHash('0x1234...') // [!code focus]
-    
-    // Query logs with filtering
-    const logs = await receipts.getLogs({ // [!code focus]
-      fromBlock: 0n, // [!code focus]
-      toBlock: 'latest', // [!code focus]
-      address: '0x1234...', // Contract address (optional) // [!code focus]
-      topics: ['0xddf252ad1be2c89b69c2b068fc378daa952ba7f163c4a11628f55a4df523b3ef'] // Optional topic filters // [!code focus]
-    }) // [!code focus]
-    
-    // Create a subscription for future logs
-    const subscription = receipts.createLogSubscription({
-      address: '0x1234...',
-      topics: ['0xddf252ad1be2c89b69c2b068fc378daa952ba7f163c4a11628f55a4df523b3ef']
-    })
-    
-    // Handle new logs
-    subscription.on('log', (log) => {
-      console.log('New log:', log)
-    })
-    ```
-    
-    <Callout type="info" title="Log Filtering">
-      The logs API follows the same pattern as Ethereum's JSON-RPC, allowing you to filter by address, topics, and block range.
-    </Callout>
-  </Tab>
-</Tabs>
+:::code-group
+```ts [Initialization] showLineNumbers {1,3-7,9} filename="node-initialization.ts"
+import { createTevmNode, http } from 'tevm'
+
+const node = createTevmNode({ // [!code focus]
+  fork: { // [!code focus]
+    transport: http('https://mainnet.infura.io/v3/YOUR-KEY') // [!code focus]
+  } // [!code focus]
+}) // [!code focus]
+
+await node.ready() // Wait for initialization // [!code focus]
+```
+
+<div data-title="Initialization Tips">
+  <Callout type="warning" title="Important">
+    Always wait for the node to be ready before using it. The <code>ready()</code> method returns a promise that resolves when the node is fully initialized.
+  </Callout>
+</div>
+
+```ts [Virtual Machine] showLineNumbers {1-3,5,8,11-19,22-27,30-33} filename="vm-access.ts"
+import { createImpersonatedTx } from 'tevm/tx'
+import { Block } from 'tevm/block'
+import { createAddress } from 'tevm/address'
+
+const vm = await node.getVm() // [!code focus]
+
+// Create a block for the transaction
+const block = new Block()
+
+// Create an impersonated transaction
+const tx = createImpersonatedTx({ // [!code focus]
+  impersonatedAddress: createAddress('0x1234...'), // [!code focus]
+  nonce: 0n, // [!code focus]
+  gasLimit: 21064n, // [!code focus]
+  maxFeePerGas: 8n, // [!code focus]
+  maxPriorityFeePerGas: 1n, // [!code focus]
+  to: createAddress('0x5678...'), // [!code focus]
+  value: 1000000000000000000n, // 1 ETH // [!code focus]
+}) // [!code focus]
+
+// Execute the transaction
+const result = await vm.runTx({ // [!code focus]
+  tx, // [!code focus]
+  block, // [!code focus]
+  skipNonce: true,  // Skip nonce check // [!code focus]
+  skipBalance: true, // Skip balance check // [!code focus]
+}) // [!code focus]
+
+// Check execution result
+if (!result.execResult.exceptionError) { // [!code focus]
+  console.log('Transaction successful') // [!code focus]
+  console.log('Gas used:', result.totalGasSpent) // [!code focus]
+} // [!code focus]
+```
+
+<div data-title="VM Info">
+  <Callout type="note" title="VM Direct Access">
+    The VM interface provides the lowest level of control, allowing you to execute transactions with precise parameters and inspect every aspect of execution.
+  </Callout>
+</div>
+
+```ts [Transaction Pool] showLineNumbers {1,4-9,12} filename="txpool-management.ts"
+const txPool = await node.getTxPool() // [!code focus]
+
+// Add a transaction
+await txPool.add({ // [!code focus]
+  from: '0x1234...', // [!code focus]
+  to: '0x5678...', // [!code focus]
+  value: 1000000000000000000n, // [!code focus]
+}) // [!code focus]
+
+// Get pending transactions
+// Sorted by gas price and nonce
+const pending = await txPool.txsByPriceAndNonce() // [!code focus]
+
+// Get all pending transactions (raw access)
+const allPending = txPool.getPendingTransactions()
+
+// Get pending nonce for an address
+const nextNonce = txPool.getPendingNonce('0x1234...')
+```
+
+<div data-title="Transaction Pool Info">
+  <Callout type="tip" title="Transaction Lifecycle">
+    Transactions added to the pool remain pending until they are mined into a block. The mining behavior depends on your node's mining configuration.
+  </Callout>
+</div>
+
+```ts [Receipts & Logs] showLineNumbers {1,4,7-12} filename="receipts-and-logs.ts"
+const receipts = await node.getReceiptsManager() // [!code focus]
+
+// Get receipt for a transaction
+const receipt = await receipts.getReceiptByTxHash('0x1234...') // [!code focus]
+
+// Query logs with filtering
+const logs = await receipts.getLogs({ // [!code focus]
+  fromBlock: 0n, // [!code focus]
+  toBlock: 'latest', // [!code focus]
+  address: '0x1234...', // Contract address (optional) // [!code focus]
+  topics: ['0xddf252ad1be2c89b69c2b068fc378daa952ba7f163c4a11628f55a4df523b3ef'] // Optional topic filters // [!code focus]
+}) // [!code focus]
+
+// Create a subscription for future logs
+const subscription = receipts.createLogSubscription({
+  address: '0x1234...',
+  topics: ['0xddf252ad1be2c89b69c2b068fc378daa952ba7f163c4a11628f55a4df523b3ef']
+})
+
+// Handle new logs
+subscription.on('log', (log) => {
+  console.log('New log:', log)
+})
+```
+
+<div data-title="Logs Info">
+  <Callout type="info" title="Log Filtering">
+    The logs API follows the same pattern as Ethereum's JSON-RPC, allowing you to filter by address, topics, and block range.
+  </Callout>
+</div>
+:::
 
 ## State Management
 
-<Cards>
-  <Card title="Account Impersonation" icon="👤">
-    Act as another account in fork mode
-  </Card>
-  <Card title="Event Filtering" icon="🔍">
-    Create and manage event filters
-  </Card>
-</Cards>
+<div style={{display: 'grid', gridTemplateColumns: 'repeat(auto-fill, minmax(200px, 1fr))', gap: '1rem', margin: '1rem 0'}}>
+  <div style={{border: '1px solid var(--vocs-border-color)', borderRadius: '8px', padding: '1rem'}}>
+    <h3>👤 Account Impersonation</h3>
+    <p>Act as another account in fork mode</p>
+  </div>
+  <div style={{border: '1px solid var(--vocs-border-color)', borderRadius: '8px', padding: '1rem'}}>
+    <h3>🔍 Event Filtering</h3>
+    <p>Create and manage event filters</p>
+  </div>
+</div>
 
-<Tabs>
-  <Tab label="Account Impersonation">
-    ```ts showLineNumbers {2,5,8} filename="account-impersonation.ts"
-    // Impersonate an account (fork mode only)
-    node.setImpersonatedAccount('0x1234...') // [!code focus]
-    
-    // Get current impersonated account
-    const impersonated = node.getImpersonatedAccount() // [!code focus]
-    
-    // Stop impersonating
-    node.setImpersonatedAccount(undefined) // [!code focus]
-    
-    // Now you can send transactions as this account
-    // without having its private key
-    ```
-    
-    <Callout type="warning" title="Fork Mode Only">
-      Account impersonation primarily affects the JSON-RPC layer, enabling methods like <code>eth_sendRawTransaction</code> to execute as the impersonated account. It works best in fork mode.
-    </Callout>
-  </Tab>
-  
-  <Tab label="Event Filtering">
-    ```ts showLineNumbers {2-10,13,16} filename="event-filtering.ts"
-    // Create a filter for Transfer events
-    node.setFilter({ // [!code focus]
-      id: '0x1', // [!code focus]
-      fromBlock: 0n, // [!code focus]
-      toBlock: 'latest', // [!code focus]
-      address: '0x1234...', // [!code focus]
-      topics: [ // [!code focus]
-        '0xddf252ad1be2c89b69c2b068fc378daa952ba7f163c4a11628f55a4df523b3ef', // Transfer event signature // [!code focus]
-      ], // [!code focus]
-    }) // [!code focus]
-    
-    // Get all filters
-    const filters = node.getFilters() // [!code focus]
-    
-    // Remove a filter
-    node.removeFilter('0x1') // [!code focus]
-    
-    // Use filters with eth_getLogs and eth_getFilterChanges
-    const logs = await node.request({
-      method: 'eth_getFilterChanges',
-      params: ['0x1']
-    })
-    ```
-    
-    <Callout type="info" title="ERC-20 Transfer Event">
-      <p>The topic <code>0xddf252ad1be2c89b69c2b068fc378daa952ba7f163c4a11628f55a4df523b3ef</code> is the keccak256 hash of the Transfer event signature:</p>
-      <p><code>Transfer(address,address,uint256)</code></p>
-    </Callout>
-  </Tab>
-</Tabs>
+:::code-group
+```ts [Account Impersonation] showLineNumbers {2,5,8} filename="account-impersonation.ts"
+// Impersonate an account (fork mode only)
+node.setImpersonatedAccount('0x1234...') // [!code focus]
+
+// Get current impersonated account
+const impersonated = node.getImpersonatedAccount() // [!code focus]
+
+// Stop impersonating
+node.setImpersonatedAccount(undefined) // [!code focus]
+
+// Now you can send transactions as this account
+// without having its private key
+```
+
+<div data-title="Impersonation Info">
+  <Callout type="warning" title="Fork Mode Only">
+    Account impersonation primarily affects the JSON-RPC layer, enabling methods like <code>eth_sendRawTransaction</code> to execute as the impersonated account. It works best in fork mode.
+  </Callout>
+</div>
+
+```ts [Event Filtering] showLineNumbers {2-10,13,16} filename="event-filtering.ts"
+// Create a filter for Transfer events
+node.setFilter({ // [!code focus]
+  id: '0x1', // [!code focus]
+  fromBlock: 0n, // [!code focus]
+  toBlock: 'latest', // [!code focus]
+  address: '0x1234...', // [!code focus]
+  topics: [ // [!code focus]
+    '0xddf252ad1be2c89b69c2b068fc378daa952ba7f163c4a11628f55a4df523b3ef', // Transfer event signature // [!code focus]
+  ], // [!code focus]
+}) // [!code focus]
+
+// Get all filters
+const filters = node.getFilters() // [!code focus]
+
+// Remove a filter
+node.removeFilter('0x1') // [!code focus]
+
+// Use filters with eth_getLogs and eth_getFilterChanges
+const logs = await node.request({
+  method: 'eth_getFilterChanges',
+  params: ['0x1']
+})
+```
+
+<div data-title="Events Info">
+  <Callout type="info" title="ERC-20 Transfer Event">
+    <p>The topic <code>0xddf252ad1be2c89b69c2b068fc378daa952ba7f163c4a11628f55a4df523b3ef</code> is the keccak256 hash of the Transfer event signature:</p>
+    <p><code>Transfer(address,address,uint256)</code></p>
+  </Callout>
+</div>
+:::
 
 ## Node Properties
 
-<Cards>
-  <Card title="Status" icon="🚦">
-    Current state of the node
-  </Card>
-  <Card title="Mode" icon="🔄">
-    Fork or normal operation mode
-  </Card>
-  <Card title="Logger" icon="📝">
-    Built-in logging capabilities
-  </Card>
-</Cards>
+<div style={{display: 'grid', gridTemplateColumns: 'repeat(auto-fill, minmax(200px, 1fr))', gap: '1rem', margin: '1rem 0'}}>
+  <div style={{border: '1px solid var(--vocs-border-color)', borderRadius: '8px', padding: '1rem'}}>
+    <h3>🚦 Status</h3>
+    <p>Current state of the node</p>
+  </div>
+  <div style={{border: '1px solid var(--vocs-border-color)', borderRadius: '8px', padding: '1rem'}}>
+    <h3>🔄 Mode</h3>
+    <p>Fork or normal operation mode</p>
+  </div>
+  <div style={{border: '1px solid var(--vocs-border-color)', borderRadius: '8px', padding: '1rem'}}>
+    <h3>📝 Logger</h3>
+    <p>Built-in logging capabilities</p>
+  </div>
+</div>
 
 <div className="properties-grid">
   <div className="property-item">
@@ -428,20 +437,24 @@ This reference documents the main API methods available on a Tevm Node instance.
 <div className="debug-examples">
   <h3>Debug Use Cases</h3>
   
-  <Cards>
-    <Card title="Gas Profiling" icon="⛽">
-      Track gas consumption of specific operations
-    </Card>
-    <Card title="Smart Contract Testing" icon="🧪">
-      Trace execution to debug test failures
-    </Card>
-    <Card title="Security Auditing" icon="🔒">
-      Analyze EVM execution paths for vulnerabilities
-    </Card>
-    <Card title="Educational Tools" icon="🎓">
-      Create EVM instruction visualizers
-    </Card>
-  </Cards>
+  <div style={{display: 'grid', gridTemplateColumns: 'repeat(auto-fill, minmax(200px, 1fr))', gap: '1rem', margin: '1rem 0'}}>
+    <div style={{border: '1px solid var(--vocs-border-color)', borderRadius: '8px', padding: '1rem'}}>
+      <h3>⛽ Gas Profiling</h3>
+      <p>Track gas consumption of specific operations</p>
+    </div>
+    <div style={{border: '1px solid var(--vocs-border-color)', borderRadius: '8px', padding: '1rem'}}>
+      <h3>🧪 Smart Contract Testing</h3>
+      <p>Trace execution to debug test failures</p>
+    </div>
+    <div style={{border: '1px solid var(--vocs-border-color)', borderRadius: '8px', padding: '1rem'}}>
+      <h3>🔒 Security Auditing</h3>
+      <p>Analyze EVM execution paths for vulnerabilities</p>
+    </div>
+    <div style={{border: '1px solid var(--vocs-border-color)', borderRadius: '8px', padding: '1rem'}}>
+      <h3>🎓 Educational Tools</h3>
+      <p>Create EVM instruction visualizers</p>
+    </div>
+  </div>
 </div>
 
 <style>
@@ -463,48 +476,48 @@ This reference documents the main API methods available on a Tevm Node instance.
 
 ## Extensibility
 
-<Tabs>
-  <Tab label="Custom Methods">
-    ```ts showLineNumbers {1-7,10} filename="custom-methods.ts"
-    const enhancedNode = node.extend((baseNode) => ({
-      async getBalance(address: string) {
-        const vm = await baseNode.getVm()
-        const account = await vm.stateManager.getAccount(address)
-        return account.balance
-      },
-    }))
-    
-    // Use the new method
-    const balance = await enhancedNode.getBalance('0x1234...')
-    ```
-    
-    <Callout type="tip" title="Plugin Architecture">
-      Tevm's extension system allows you to add custom methods to the node instance. These methods have full access to the base node's functionality.
-    </Callout>
-  </Tab>
-  
-  <Tab label="State Cloning">
-    ```ts showLineNumbers {2,5-7} filename="state-copying.ts"
-    // Create a deep copy with independent state
-    const nodeCopy = await node.deepCopy() // [!code focus]
-    
-    // Fork from another node
-    const forkedNode = createTevmNode({ // [!code focus]
-      fork: { transport: node } // [!code focus]
-    }) // [!code focus]
-    
-    // Now you can experiment with different states
-    await nodeCopy.sendTransaction({ ... })
-    
-    // Original node state remains unchanged
-    console.log('Original state intact')
-    ```
-    
-    <Callout type="note" title="Use Cases">
-      State copying is useful for creating test scenarios, simulating alternative execution paths, or creating snapshots of state for later comparison.
-    </Callout>
-  </Tab>
-</Tabs>
+:::code-group
+```ts [Custom Methods] showLineNumbers {1-7,10} filename="custom-methods.ts"
+const enhancedNode = node.extend((baseNode) => ({
+  async getBalance(address: string) {
+    const vm = await baseNode.getVm()
+    const account = await vm.stateManager.getAccount(address)
+    return account.balance
+  },
+}))
+
+// Use the new method
+const balance = await enhancedNode.getBalance('0x1234...')
+```
+
+<div data-title="Plugin Info">
+  <Callout type="tip" title="Plugin Architecture">
+    Tevm's extension system allows you to add custom methods to the node instance. These methods have full access to the base node's functionality.
+  </Callout>
+</div>
+
+```ts [State Cloning] showLineNumbers {2,5-7} filename="state-copying.ts"
+// Create a deep copy with independent state
+const nodeCopy = await node.deepCopy() // [!code focus]
+
+// Fork from another node
+const forkedNode = createTevmNode({ // [!code focus]
+  fork: { transport: node } // [!code focus]
+}) // [!code focus]
+
+// Now you can experiment with different states
+await nodeCopy.sendTransaction({ ... })
+
+// Original node state remains unchanged
+console.log('Original state intact')
+```
+
+<div data-title="Cloning Info">
+  <Callout type="note" title="Use Cases">
+    State copying is useful for creating test scenarios, simulating alternative execution paths, or creating snapshots of state for later comparison.
+  </Callout>
+</div>
+:::
 
 ## JSON-RPC Support
 
@@ -512,90 +525,111 @@ This reference documents the main API methods available on a Tevm Node instance.
   Tevm Node implements standard Ethereum JSON-RPC methods, making it compatible with existing Ethereum tools and libraries.
 </Callout>
 
-<Tabs>
-  <Tab label="EIP-1193 Interface">
-    ```ts showLineNumbers {1,3,6-9} filename="eip1193.ts"
-    import { requestEip1193 } from 'tevm/decorators'
-    
-    const node = createTevmNode().extend(requestEip1193())
-    
-    // Standard JSON-RPC calls
-    const blockNumber = await node.request({ // [!code focus]
-      method: 'eth_blockNumber', // [!code focus]
-      params: [] // [!code focus]
-    }) // [!code focus]
-    
-    // Get balance
-    const balance = await node.request({
-      method: 'eth_getBalance',
-      params: ['0x1234...', 'latest']
-    })
-    ```
-    
-    <Callout type="info" title="Provider Interface">
-      The EIP-1193 interface makes Tevm Node compatible with libraries like Ethers.js that expect a standard Ethereum provider.
-    </Callout>
-  </Tab>
-  
-  <Tab label="Action Methods">
-    ```ts showLineNumbers {1,3,6-7} filename="eth-actions.ts"
-    import { ethActions } from 'tevm/decorators'
-    
-    const node = createTevmNode().extend(ethActions())
-    
-    // Using action methods
-    const blockNumber = await node.eth.getBlockNumber() // [!code focus]
-    const balance = await node.eth.getBalance('0x1234...') // [!code focus]
-    
-    // Send transaction
-    const hash = await node.eth.sendTransaction({
-      from: '0x1234...',
-      to: '0x5678...',
-      value: 1000000000000000000n
-    })
-    ```
-    
-    <Callout type="tip" title="Developer Experience">
-      Action methods provide a more ergonomic API than raw JSON-RPC calls, with proper TypeScript typing and simpler parameter handling.
-    </Callout>
-  </Tab>
-</Tabs>
+:::code-group
+```ts [EIP-1193 Interface] showLineNumbers {1,3,6-9} filename="eip1193.ts"
+import { requestEip1193 } from 'tevm/decorators'
+
+const node = createTevmNode().extend(requestEip1193())
+
+// Standard JSON-RPC calls
+const blockNumber = await node.request({ // [!code focus]
+  method: 'eth_blockNumber', // [!code focus]
+  params: [] // [!code focus]
+}) // [!code focus]
+
+// Get balance
+const balance = await node.request({
+  method: 'eth_getBalance',
+  params: ['0x1234...', 'latest']
+})
+```
+
+<div data-title="Provider Info">
+  <Callout type="info" title="Provider Interface">
+    The EIP-1193 interface makes Tevm Node compatible with libraries like Ethers.js that expect a standard Ethereum provider.
+  </Callout>
+</div>
+
+```ts [Action Methods] showLineNumbers {1,3,6-7} filename="eth-actions.ts"
+import { ethActions } from 'tevm/decorators'
+
+const node = createTevmNode().extend(ethActions())
+
+// Using action methods
+const blockNumber = await node.eth.getBlockNumber() // [!code focus]
+const balance = await node.eth.getBalance('0x1234...') // [!code focus]
+
+// Send transaction
+const hash = await node.eth.sendTransaction({
+  from: '0x1234...',
+  to: '0x5678...',
+  value: 1000000000000000000n
+})
+```
+
+<div data-title="Actions Info">
+  <Callout type="tip" title="Developer Experience">
+    Action methods provide a more ergonomic API than raw JSON-RPC calls, with proper TypeScript typing and simpler parameter handling.
+  </Callout>
+</div>
+:::
 
 ### Supported Methods
 
-<FileTree>
-  <FileTree.Folder name="JSON-RPC Methods" defaultOpen>
-    <FileTree.Folder name="State Access" defaultOpen>
-      <FileTree.File name="eth_getBalance" />
-      <FileTree.File name="eth_getCode" />
-      <FileTree.File name="eth_getStorageAt" />
-      <FileTree.File name="eth_getTransactionCount" />
-    </FileTree.Folder>
-    <FileTree.Folder name="Block Methods">
-      <FileTree.File name="eth_blockNumber" />
-      <FileTree.File name="eth_getBlockByHash" />
-      <FileTree.File name="eth_getBlockByNumber" />
-    </FileTree.Folder>
-    <FileTree.Folder name="Transaction Methods">
-      <FileTree.File name="eth_sendTransaction" />
-      <FileTree.File name="eth_sendRawTransaction" />
-      <FileTree.File name="eth_getTransactionByHash" />
-      <FileTree.File name="eth_getTransactionReceipt" />
-    </FileTree.Folder>
-    <FileTree.Folder name="Anvil Methods">
-      <FileTree.File name="anvil_impersonateAccount" />
-      <FileTree.File name="anvil_stopImpersonatingAccount" />
-      <FileTree.File name="anvil_mine" />
-      <FileTree.File name="anvil_setBalance" />
-    </FileTree.Folder>
-    <FileTree.Folder name="Tevm Methods">
-      <FileTree.File name="tevm_snapshot" />
-      <FileTree.File name="tevm_revert" />
-      <FileTree.File name="tevm_mine" />
-      <FileTree.File name="tevm_setAccount" />
-    </FileTree.Folder>
-  </FileTree.Folder>
-</FileTree>
+<div style={{border: '1px solid var(--vocs-border-color)', borderRadius: '8px', padding: '1.5rem', backgroundColor: 'var(--vocs-color_background2)'}}>
+  <h3 style={{marginTop: 0}}>JSON-RPC Methods</h3>
+  
+  <div style={{marginLeft: '1rem'}}>
+    <details open>
+      <summary style={{fontWeight: 'bold', marginBottom: '0.5rem', cursor: 'pointer'}}>State Access</summary>
+      <ul style={{listStyleType: 'none', paddingLeft: '1rem'}}>
+        <li>📄 eth_getBalance</li>
+        <li>📄 eth_getCode</li>
+        <li>📄 eth_getStorageAt</li>
+        <li>📄 eth_getTransactionCount</li>
+      </ul>
+    </details>
+    
+    <details>
+      <summary style={{fontWeight: 'bold', marginBottom: '0.5rem', cursor: 'pointer'}}>Block Methods</summary>
+      <ul style={{listStyleType: 'none', paddingLeft: '1rem'}}>
+        <li>📄 eth_blockNumber</li>
+        <li>📄 eth_getBlockByHash</li>
+        <li>📄 eth_getBlockByNumber</li>
+      </ul>
+    </details>
+    
+    <details>
+      <summary style={{fontWeight: 'bold', marginBottom: '0.5rem', cursor: 'pointer'}}>Transaction Methods</summary>
+      <ul style={{listStyleType: 'none', paddingLeft: '1rem'}}>
+        <li>📄 eth_sendTransaction</li>
+        <li>📄 eth_sendRawTransaction</li>
+        <li>📄 eth_getTransactionByHash</li>
+        <li>📄 eth_getTransactionReceipt</li>
+      </ul>
+    </details>
+    
+    <details>
+      <summary style={{fontWeight: 'bold', marginBottom: '0.5rem', cursor: 'pointer'}}>Anvil Methods</summary>
+      <ul style={{listStyleType: 'none', paddingLeft: '1rem'}}>
+        <li>📄 anvil_impersonateAccount</li>
+        <li>📄 anvil_stopImpersonatingAccount</li>
+        <li>📄 anvil_mine</li>
+        <li>📄 anvil_setBalance</li>
+      </ul>
+    </details>
+    
+    <details>
+      <summary style={{fontWeight: 'bold', marginBottom: '0.5rem', cursor: 'pointer'}}>Tevm Methods</summary>
+      <ul style={{listStyleType: 'none', paddingLeft: '1rem'}}>
+        <li>📄 tevm_snapshot</li>
+        <li>📄 tevm_revert</li>
+        <li>📄 tevm_mine</li>
+        <li>📄 tevm_setAccount</li>
+      </ul>
+    </details>
+  </div>
+</div>
 
 <div style={{ display: 'flex', justifyContent: 'center', marginTop: '2rem' }}>
   <Button href="../api/json-rpc" variant="accent" size="large">
