--- a/docs/node/docs/pages/getting-started/testimonials.mdx
+++ b/docs/node/docs/pages/getting-started/testimonials.mdx
@@ -9,7 +9,7 @@ import { Callout, Button } from 'vocs/components'
 
 # Community Testimonials
 
-Tevm Node has been embraced by developers throughout the Ethereum ecosystem. Here's what the community is saying about how it's transforming their development workflow and enhancing the user experience.
+Here's what the community is saying about Tevm
 
 ## From Industry Leaders
 
@@ -135,62 +135,15 @@ Tevm's unique approach of bringing Ethereum execution directly to JavaScript env
 > — **James** ([@lcm_in_pangea](https://twitter.com/lcm_in_pangea))
 :::
 
-## Industry Recognition
-
-Tevm is gaining recognition for its innovative approach to Ethereum development:
-
-<div style={{ display: 'grid', gridTemplateColumns: 'repeat(auto-fill, minmax(300px, 1fr))', gap: '1rem', margin: '1.5rem 0' }}>
-  <div style={{ backgroundColor: 'var(--vocs-color_backgroundAccent)', color: 'var(--vocs-color_backgroundAccentText)', borderRadius: 'var(--vocs-borderRadius_4)', padding: '1.5rem' }}>
-    <h3 style={{ margin: '0 0 0.5rem 0', fontSize: 'var(--vocs-fontSize_18)' }}>Seamless Integration</h3>
-    <p style={{ margin: 0, fontSize: 'var(--vocs-fontSize_14)' }}>Tevm works natively with popular libraries like Viem and Ethers, making it easy to incorporate into existing workflows without a steep learning curve.</p>
-  </div>
-  
-  <div style={{ backgroundColor: 'var(--vocs-color_backgroundAccent)', color: 'var(--vocs-color_backgroundAccentText)', borderRadius: 'var(--vocs-borderRadius_4)', padding: '1.5rem' }}>
-    <h3 style={{ margin: '0 0 0.5rem 0', fontSize: 'var(--vocs-fontSize_18)' }}>Client Agnostic</h3>
-    <p style={{ margin: 0, fontSize: 'var(--vocs-fontSize_14)' }}>Whether you're building with Vue, React, Angular, or plain JavaScript, Tevm provides consistent performance and capabilities across environments.</p>
-  </div>
-  
-  <div style={{ backgroundColor: 'var(--vocs-color_backgroundAccent)', color: 'var(--vocs-color_backgroundAccentText)', borderRadius: 'var(--vocs-borderRadius_4)', padding: '1.5rem' }}>
-    <h3 style={{ margin: '0 0 0.5rem 0', fontSize: 'var(--vocs-fontSize_18)' }}>Browser Native</h3>
-    <p style={{ margin: 0, fontSize: 'var(--vocs-fontSize_14)' }}>Run a complete Ethereum environment directly in the browser, without any backend services or specialized infrastructure.</p>
-  </div>
-</div>
-
-:::warning[Developer Quote]
-"Tevm brings the power of local Ethereum execution to any JavaScript environment, enabling developers to create more responsive and resilient dApps with minimal infrastructure requirements."
-:::
-
-## Key Benefits Reported
-
-Users consistently mention these advantages when discussing Tevm:
-
-| Benefit | Description | Impact |
-| ------- | ----------- | ------ |
-| **Speed** | Near-instant transaction execution | Dramatically improved feedback loops during development |
-| **Reliability** | Independent of external networks | Less downtime and fewer infrastructure dependencies |
-| **Flexibility** | Works in any JavaScript context | Deploy anywhere: browsers, servers, or serverless functions |
-| **Testability** | Complete control over execution environment | Easier to write reliable, deterministic tests |
-| **UX Enhancement** | Local execution enables optimistic UI updates | Better end-user experience with less waiting |
-| **Zero Dependencies** | No native dependencies or external services | Simpler deployment, fewer compatibility issues |
-| **Type Safety** | Full TypeScript integration | Fewer runtime errors, better IDE experience |
-
 ## Share Your Experience
 
 ::::steps
 ### Join the Community
 
-First, connect with the Tevm community to share your experiences and get support:
-
-- [Discord Community](https://discord.gg/tevm)
-- [Telegram Group](https://t.me/+ANThR9bHDLAwMjUx)
-- [Twitter/X](https://twitter.com/tevmtools)
-
-### Share Your Feedback
-
 We'd love to hear how Tevm has improved your development workflow:
 
-- Tweet your feedback to [@tevmtools](https://twitter.com/tevmtools) with hashtag #TevmTestimonial
-- Join discussions in our [Discord](https://discord.gg/tevm) or [Telegram](https://t.me/+ANThR9bHDLAwMjUx)
+- [Telegram Group](https://t.me/+ANThR9bHDLAwMjUx)
+- [Twitter/X](https://twitter.com/tevmtools)
 
 ### Report Success Stories
 
